# gamstransfer

./: DESCRIPTION  LICENSE  MD5  NAMESPACE  NEWS.md  README.md  configure  configure.ac
R/: Alias.R  BaseAlias.R  Container.R  DomainViolation.R  Equation.R  Parameter.R  RcppExports.R  Set.R  SpecialValues.R  Super.R  Symbol.R  UniverseAlias.R  Variable.R  symbolTypes.R  utility.R
man/: Alias.Rd  Container.Rd  DomainViolation.Rd  Equation.Rd  Parameter.Rd  Set.Rd  SpecialValues.Rd  UniverseAlias.Rd  Variable.Rd  dot-Symbol.Rd  gamstransfer-package.Rd  readGDX.Rd  writeGDX.Rd
src/: Makevars.in  Makevars.win  Read.cpp  Utilities.cpp  Write.cpp  utilities.hpp
src/gdx/: LICENSE
src/gdx/src/gdlib/: charmaps.h  cmdpar.cpp  cmdpar.h  datastorage.cpp  dblutil.cpp  dblutil.h  gamsdirs.cpp  gamsdirs.h  gmacro.cpp  gmacro.h  gmsdata.cpp  gmsgen.h  gmsglob.cpp  gmsglob.h  gmsheapnew.cpp  gmsheaprep.cpp  gmsobj.cpp  gmsobj.h  gmsobj.hpp  gmsonly.cpp  gmsonly.h  obfuscatestr.cpp  runner.cpp  statlib.cpp  statlibobj.cpp  strhash.cpp  strindexbuf.h  xcompress.cpp  xcompress.h
src/gdx/src/global/: delphitypes.h  delphitypes.hpp  gmslibname.cpp  gmslibname.h  modhead.cpp  modhead.h
src/gdx/src/rtl/: math_p3.cpp  math_p3.h  math_p3.hpp  p3io.h  p3io.hpp  (+6 more)
tests/: testthat.R
tests/testthat/: data.gdx  diffile.gdx  empty.gdx  foo.gdx  foo.gms  foo.lst  foo_1.gdx  gt.gdx  out.gdx  partial_equation.gdx  partial_parameter.gdx  partial_scalar.gdx  partial_scalar_equation.gdx  partial_scalar_variable.gdx  partial_set.gdx  partial_variable.gdx  partial_write.gdx  test-read.R
